--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "quiz",
-  "version": "1.0.0",
-  "description": "A node and express quiz Application",
+  "name": "chalkbaord",
+  "version": "1.0",
+  "description": "Quiz Application with CRUD Functionality",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
