--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "chalkbaord",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Quiz Application with CRUD Functionality",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js" 
   },
   "repository": {
     "type": "git",
