--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quiz Application with CRUD Functionality",
   "main": "app.js",
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
