--- a/web.config
+++ b/web.config
@@ -1,8 +1,31 @@
-﻿<configuration>
-    <system.webServer>
-        <handlers>
-            <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
-            <add name="iisnode" path="app.js" verb="*" modules="iisnode" />
-        </handlers>
-        </system.webServer>
-</configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
+  <configuration>
+
+    <system.webServer>        
+
+      <handlers>
+
+        <add name="iisnode" path="app.js" verb="*" modules="iisnode"/>
+
+      </handlers>
+
+      <rewrite>
+
+        <rules>
+
+            <rule name="DynamicContent">
+
+                 <match url="/*" />
+
+                 <action type="Rewrite" url="app.js"/>
+
+            </rule>
+
+       </rules>
+
+      </rewrite>
+
+    </system.webServer>
+
+  </configuration>
